--- a/mic-and-tab/options.html
+++ b/mic-and-tab/options.html
@@ -4,6 +4,15 @@
     <h1>Provide your Deepgram API Key</h1>
 
     <input type="text" id="api">
+
+    <h2>Select Language</h2>
+    <select id="language">
+      <option value="en">English</option>
+      <option value="multi">MultiLanguage</option>
+      <option value="ru">Russian</option>
+      <option value="uk">Ukrainian</option>
+    </select>
+
     <button>Save</button>
 
     <script src="options.js"></script>
