--- a/mic-and-tab/popup.html
+++ b/mic-and-tab/popup.html
@@ -2,17 +2,59 @@
 <html>
   <head>
     <style>
-      body { width: 500px; }
-      button { width: 100%; }
-      #controls { display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 1em; margin-top: 1em; }
+    body {
+      width: 200px;
+      padding: 1em;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background-color: #f4f4f4;
+    }
+
+    button {
+      margin-bottom: 0.5em;
+      padding: 0.5em;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    #options {
+      width: 60px;
+      background-color: #d3d3d3;
+      color: #000;
+      text-align: center;
+      margin-bottom: 1em;
+      float: left;
+    }
+
+    #controls {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 4em;
+    }
+
+    #controls button {
+      width: 80px;
+      background-color: #4CAF50;
+      color: white;
+      text-align: center;
+    }
+
+    #transcript {
+      margin-top: 1em;
+      word-wrap: break-word;
+      font-size: 0.9em;
+      color: #333;      
+    }
     </style>
   </head>
   <body style="padding: 1em;">
     <button id="options">Options</button>
     <div id="controls">
-      <button id="start">Start transcription</button>
-      <button id="stop">Stop transcription</button>
-      <button id="clear">Clear transcription</button>
+      <button id="start">Start</button>
+      <button id="stop">Stop</button>
+      <button id="clear">Clear</button>
     </div>
     <p id="transcript"></p>
     <script src="popup.js"></script>
