--- a/mic-and-tab/options.html
+++ b/mic-and-tab/options.html
@@ -1,5 +1,25 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8">
+    <title>Options Page</title>
+    <style>
+      table {
+        width: 100%;
+        border-collapse: collapse;
+      }
+      table, th, td {
+        border: 1px solid black;
+      }
+      th, td {
+        padding: 8px;
+        text-align: left;
+      }
+      button {
+        cursor: pointer;
+      }
+    </style>
+  </head>
   <body>
     <h1>Provide your Deepgram API Key</h1>
 
@@ -13,7 +33,22 @@
       <option value="uk">Ukrainian</option>
     </select>
 
-    <button>Save</button>
+    <button class="button-save">Save</button>
+
+    <h2>Transcripts</h2>
+    <table id="transcripts-table">
+      <thead>
+        <tr>
+          <th>Session Name</th>
+          <th>Online Transcript Date</th>
+          <th>Transcript Date</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Rows will be dynamically generated here -->
+      </tbody>
+    </table>
 
     <script src="options.js"></script>
   </body>
