--- a/mic-and-tab/options.html
+++ b/mic-and-tab/options.html
@@ -13,7 +13,12 @@
       <option value="uk">Ukrainian</option>
     </select>
 
-    <button>Save</button>
+    <button id="save-settings">Save</button>
+
+    <h2>Saved Transcripts</h2>
+    <div id="transcripts-container">
+      <p>No transcripts saved yet.</p>
+    </div>
 
     <script src="options.js"></script>
   </body>
