--- a/mic-and-tab/options.html
+++ b/mic-and-tab/options.html
@@ -33,6 +33,9 @@
         cursor: pointer;
         border-radius: 5px;
       }
+      .save-session-name {
+        margin-left: 3px;
+      }
     </style>
   </head>
   <body>
@@ -54,9 +57,11 @@
     <table id="transcripts-table">
       <thead>
         <tr>
+          <th>Date</th>
           <th>Session Name</th>
-          <th>Online Transcript</th>
-          <th>Transcript via Api</th>
+          <th>Plain text</th>
+          <th>Normalized json</th>
+          <th>Row json</th>
           <th>Audio file</th>
           <th>Actions</th>
         </tr>
