--- a/mic-and-tab/popup.html
+++ b/mic-and-tab/popup.html
@@ -48,6 +48,11 @@
       text-align: center;
     }
 
+    #controls button:disabled {
+      background-color: #aca3a3;
+      cursor: not-allowed;
+    }
+
     #transcript {
       margin-top: 1em;
       word-wrap: break-word;
@@ -58,7 +63,7 @@
     #header {
       display: flex;
       align-items: center;
-    }
+    }    
     </style>
   </head>
   <body style="padding: 1em;">
